     getpeereid.
   - [regress/agent-ptrace.sh] Skip tests if platform doesn't support it or
     gdb cannot be found.
   - [regress/reconfigure/sh] Make path to sshd fully qualified if required.
   - [regress/rekey.sh] Remove dependence on /dev/zero (not all platforms have
     it).  The sparse file will take less disk space too.
   - [regress/sftp-cmds.sh] Ensure file used for test are readable.
   - [regress/stderr-after-eof.sh] Search for a usable checksum program.
   - [regress/sftp-badcmds.sh regress/sftp-cmds.sh regress/sftp.sh
     regress/ssh-com-client.sh regress/ssh-com-sftp.sh regress/stderr-data.sh
     regress/transfer.sh] Use ${EXEEXT} where appropriate.
   - [regress/sftp.sh regress/ssh-com-sftp.sh] Remove dependency on /dev/stdin.
   - [regress/agent-ptrace.sh regress/agent-timeout.sh]
     "grep -q" -> "grep >/dev/null"
   - [regress/agent.sh regress/proto-version.sh regress/ssh-com.sh
     regress/test-exec.sh] Handle different was of echoing without newlines.
   - [regress/dynamic-forward.sh] Some "which" programs output on stderr.
   - [regress/sftp-cmds.sh] Use portable "test" option.
   - [regress/test-exec.sh] Use sudo, search for "whoami" equivalent, always
     use Strictmodes no, wait longer for sshd startup.
   - [regress/Makefile] Remove BSDisms.
   - [regress/README.regress] Add a basic readme.

20030903
 - (djm) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/08/26 09:58:43
     [auth-passwd.c auth.c auth.h auth1.c auth2-none.c auth2-passwd.c]
     [auth2.c monitor.c]
     fix passwd auth for 'username leaks via timing'; with djm@, original 
     patches from solar
   - markus@cvs.openbsd.org 2003/08/28 12:54:34
     [auth.h]
     remove kerberos support from ssh1, since it has been replaced with GSSAPI;
     but keep kerberos passwd auth for ssh1 and 2; ok djm, hin, henning, ...
   - markus@cvs.openbsd.org 2003/09/02 16:40:29
     [version.h]
     enter 3.7
   - jmc@cvs.openbsd.org 2003/09/02 18:50:06
     [sftp.1 ssh_config.5]